Alignment issues + updates

--- a/stylesheets/scss/mobile.scss
+++ b/stylesheets/scss/mobile.scss
@@ -920,7 +920,7 @@
 					width: 118px;
 				}
 				.sizeImage {
-					background: url('/images/small.png') no-repeat center center;
+					background: url('/images/sizeNone.png') no-repeat center center;
 					background-size: 65%;
 				}
 				.typeImage {
@@ -969,9 +969,9 @@
 	    	float: left; 
 	    	height: 150px; 
 	    	overflow: none; 
-	    	margin: 1% 2% 5% 2.5%; 
+	    	margin: 1% 2% 5% 1.5%; 
 	    	position: relative; 
-	    	width: 28%; 
+	    	width: 89px; 
 	    	z-index: 50;
 
 	    	div.ajaxLoader{
